--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using CineMiniApp
-@using CineMiniApp.Models
+﻿@using CineMini
+@using CineMini.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
