--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <button id="themeToggle" class="btn btn-sm btn-outline-dark">Toggle Theme</button>
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CineMiniApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -46,5 +47,15 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+    <script>
+        const html = document.documentElement;
+        const toggle = document.getElementById("themeToggle");
+
+        toggle.addEventListener("click", () => {
+            const current = html.getAttribute("data-bs-theme");
+            html.setAttribute("data-bs-theme", current === "dark" ? "light" : "dark");
+        });
+    </script>
 </body>
 </html>
